--- a/sample_config.env
+++ b/sample_config.env
@@ -1,15 +1,15 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "6"
+APP_ID = "24316517"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+API_HASH = "ab33479d43c662f11cf9ae4b26350709"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
+TG_BOT_TOKEN = "7375896159:AAHbHNILAzszx1Tf0fO5X8Xg4akbAjJngFk"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "1234567890"
+ADMINS = "6787924476"
 
 # Masukan Username Telegram mu tanpa @
 OWNER = ""
@@ -23,11 +23,11 @@ FORCE_SUB_GROUP = 0
 FORCE_SUB_CHANNEL = 0
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+BASE_URL = ""
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
